reduction-for-tso
yeni lemma’lar eklendi; write-atomicity kismi henuz bitmedi.

--- a/formal-framework.tex
+++ b/formal-framework.tex
@@ -150,7 +150,7 @@ Each TSO-execution thus induces a set of tighter executions.
 Let $\tightclosurex{\mathbf{e}}=\{\mathbf{f} \mid \mathbf{f}\tighter\mathbf{e}\}$; that is, the set of all TSO-executions tighter than $\mathbf{e}$.
 %Let $\tightclosurestrictx {\mathbf{e}}$ denote the subset of $\tightclosurex{\mathbf{e}}$ consisting of only strictly equivalent executions.
 
-\begin{definition}[SC-like]
+\begin{definition}[SC-like]\label{def:sc-like}
 Let $\mathbf{e}$ be a TSO-execution.
 %It is called {\em observationally SC-like} if $\tightclosurex {\mathbf{e}}$ contains an atomic execution.
 It is called {\em SC-like} if $\tightclosurex {\mathbf{e}}$ contains a buffer-free execution.
