--- a/reduction-for-tso.tex
+++ b/reduction-for-tso.tex
@@ -4,7 +4,7 @@
 In this section, we explain how the reduction theory of Lipton can be used for TSO.
 Our goal is to present sufficient conditions for programs such that when a program satisfies these conditions the program is guaranteed to be unable to distinguish TSO semantics from SC semantics. 
 This is the first step of applying reduction to TSO programs.
-In the following sections, we will show how we can extend it to programs which are initially TSO distinguishing.
+In the following sections, we will show how we can extend it to programs which are initially TSO-specific.
 
 \begin{definition}[Movers]
 \label{def:movers}
@@ -16,33 +16,53 @@ Similarly, $s$ is {\em right-mover in $\aliequivgeneric$} if for any $\alisequen
 \end{definition}
 
 Intuitively, $s$ is left mover (resp. right mover) if reordering $s$ before (resp. after) any other statement that is concurrent with $s$ does not change the behavior (all runs belonging to the same equivalence have the same behavior).
-In the classic definition of reduction, the equivalence relation requires that the two sequences be permutations of each other and that the end states are identical, which corresponds to $\tsoequivstrict$ in the TSO context.
+In the classic definition of reduction, the equivalence relation requires that the two sequences be permutations of each other and that the end states are identical, which corresponds to $\tsoequiv$ in the TSO context.
 The reason for the added generality will become clear once we generalize reduction with abstraction.
 
 Our first result about movers follows immediately from definitions.
 \begin{lemma}
-Let $P$ be a labelled program.
-All of its TSO runs are SC-like if all remote writes are left-movers in $\tsoequivstrict$.
-Dually, all of its TSO runs are SC-like if all local actions (excluding remote writes) are right-movers in $\tsoequivstrict$.
-
-All of its TSO runs are observationally SC-like if all remote writes are left-movers in $\tsoequiv$.
-Dually, all of its TSO runs are observationally SC-like if all local actions (excluding remote writes) are right-movers in $\tsoequiv$.
+Let $P$ be a program.
+All of its TSO runs are SC-like if all remote writes are left-movers in $\tsoequiv$.
+Dually, all of its TSO runs are SC-like if all local actions (i.e. ignoring remote writes) are right-movers in $\tsoequiv$.
 \end{lemma}
-This result depends on a strong constraint which is unlikely to be satisfied by many programs.
+\begin{proof}
+Take any run $\alisequencex r\in \alirunsx {tso} P$.
+If all remote writes are left-movers in $\tsoequiv$, then there exists a run $\alisequencex {r'}\tsoequiv\alisequencex {r}$ such that all local writes are synchronous. 
+Then by Def.~\ref{def:sc-like}, $\alisequencex r$ is SC-like.
+A symmetric argument applies for the second case.
+\end{proof}
+
+%All of its TSO runs are observationally SC-like if all remote writes are left-movers in $\tsoequiv$.
+%Dually, all of its TSO runs are observationally SC-like if all local actions (excluding remote writes) are right-movers in $\tsoequiv$.
+%\end{lemma}
+This result depends on a strong constraint, all updates being left-movers or all reads being right-movers, which is unlikely to be satisfied by many programs.
 In what follows we will provide a series of incrementally more general results.
 Fix a labelled program $P=\{m_1,\ldots,m_n\}$.
+Let $\sigma$ be a partitioning of (the methods of) $P$.
+A {\em $\sigma$-partitioned runs} of $P[T]$ is the subset of $\alirunsx {tso} {P[T]}$ containing all and only those runs in which each $t$ executes methods from the same partition.
 \begin{lemma}
-All TSO runs of $P$ are SC-like if for each method $m_i$, either all of its local actions are right-movers in $\tsoequivstrict$ or all of its remote write actions are left-movers. 
+Let $P$ be a program and $\sigma$ be a partitioning of $P$.
+If $\sigma$ is such that in $\sigma$-partitioned runs of $P[T]$ for each partition, all remote write actions executed by all the methods in the partition are left-movers or all local actions executed by all the methods in the partition are right-movers, then $\sigma$-partitioned runs are SC-like.
 \end{lemma}
-This result helps us to reason about methods individually.
-We have the following corollary, which is also implied by triangular-race freedom of \cite{Owe2009}.
+Call a subset of $\alirunsx {tso} {P[T]}$ {\em singular} if it contains all and only those runs in which each thread $t\in T$ runs at most one method; i.e. the {\sc\small Init}-transition is executed at most once by each $t$.
+Then the following is a particular instance of the previous result.
+\begin{corollary}
+All singular TSO runs of $P[T]$ are SC-like if for each method $m_i$, either all of its local actions are right-movers in $\tsoequivstrict$ or all of its remote write actions are left-movers. 
+\end{corollary}
+We can specialize even further, obtaining the following, which is also implied by triangular-race freedom of \cite{Owe2009}.
 \begin{corollary}
 Let $P$ be such that each $m_i$ either only updates the shared memory (no read actions) or only reads shared memory (no write actions).
-Then all of its TSO runs are SC-like.
+Then all singular TSO runs of $P[T]$ are SC-like.
 \end{corollary}
 
-Now we will investigate the impact of placing fence statements in restricting the non-SC-like behaviors of programs.
-For the following fix $s^{loc}$ and $s$ as matching local and remote write actions.
+%Now we will investigate the impact of placing fence statements in restricting the non-SC-like behaviors of programs.
+\paragraph{Write atomicity.}
+We will call a statement $s$ in $P$ {\em atomic} if all transitions whose source is $s$ are executed without interference. 
+In particular, a memory update statement ($s=\alimemx i\mathtt{:=} e$) is atomic if the two transitions caused by $s$ are adjacent; i.e. the local write action due to $s$ is synchronous.
+The reason we introduce write atomicity should be clear: By Lem.~\ref{lem:synchronous-write}, if one can prove that for any TSO run of program $P$ there exists an equivalent run in which $s$ is atomic, then we can safely transform $s$ to $\aliatomicx {s\mathtt{;} \alifence}$.
+This substitution decreases the number of possible interleavings, which in turn simplifies the analysis of the program.
+Indeed, the latter is a step towards the ultimate goal of analyzing the whole program under SC semantics.
+For the following fix an update statement $s$ and let $s^{loc}$ and $s^{rem}$ denote its local and remote write actions.
 \begin{lemma}
 If in any TSO run in which $s^{loc}$ is executed by some thread $t$, all the combined write actions executed by $t$ up to the occurrence of $s^{loc}$ are atomic and $s$ is left-mover, then $s^{loc}$ and $s$ are atomic.
 \end{lemma}
