--- a/ali-commands.tex
+++ b/ali-commands.tex
@@ -90,4 +90,8 @@
 \newcommand{\aliruns}{\ensuremath{\mathbf{R}}}
 \newcommand{\alirunsx}[2]{\ensuremath{\aliruns_{#1}(#2)}}
 
+%preceding abstraction-tso (Abstracting TSO programs)
+\newcommand{\aliabsrulex}[1]{\textnormal{\sc\small #1}}
+\newcommand{\alihavocval}{\ensuremath{\star}}
+\newcommand{\alicompequiv}{\ensuremath{\tsoequiv_c}}
 
